Clean up docs a bit before pointing to them in the release announcement